src/tests/fail-in-without-range.err
Fatal error: exception Eqeq.Error("line 6 (char 17): 'in'")
